newLayout.css
*{
    margin: 0;
    padding: 0;
}
.navMenu{
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    display: flex;
    justify-content: space-between;
    align-content: center;
}
.pageNav{    
    background: linear-gradient( hsl(237, 79%, 42%), hsl(201, 100%, 50%));
    flex: 1;
    text-align: right;
    padding: 0.5%;
    border-bottom-color: hsl(192, 100%, 50%);
    border-bottom-width: 10px;
    border-top-width: 0;
    border-left-width: 0;
    border-right-width: 0;
    border-style: solid;
}
.pageNav ul li{
    list-style: none;
    padding: 8px 12px;
    display: inline-block;
    position: relative;
}
.pageNav ul li a{
    text-decoration: none;
    color: hsl(33, 100%, 88%);
    font-size: 20px;
}
.pageNav ul li a::after{
    content: '';
    width: 0%;
    height: 3px;
    background: hsl(174, 14%, 85%);
    display: block;
    margin: auto;
    transition: 0.5s;
}
.pageNav ul li a:hover::after{
    width: 100%;
}

.mainTitle{
    display: flex;
    align-content: center;
}
.mainTitle h1{
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color:hsl(214, 100%, 30%) ;
    flex: 1;
    padding: 2%;
    text-align: center;
    font-weight: bold;
}

.blackBox{
    text-decoration: none;
    width: 100%;
    min-height: 950px;
    height: 80%;
    background-color: hsl(0, 0%, 0%, 100%); /* Black */
    overflow-x: hidden; /* Disable horizontal scroll */

    display: flex;
    justify-content: space-between;

}
.contentBox{
    font-family: sans-serif;
    padding: 2% 5%;
    border-radius: 10px;
    background-color: white;
    margin-left: 5%;
    margin-top: 3%;
    margin-bottom: 3%;
    width: 76%;
    box-shadow: 5px 10px 10px rgba(255, 255, 255, 0.571);
}
.slideNavBox{
    font-family: sans-serif;
    padding: 20px 20px;
    border-radius: 20px;
    background-color: hsl(0, 0%, 0%);/**/
    border-style: solid;
    border-width: 5px;
    max-height: 50%;
    border-color: hsl(0, 0%, 10%);/**/
    text-align: center;
    margin-left: 4%;
    margin-right: 1%;
    margin-top: 3%;
    margin-bottom: 3%;
    width: 20%;
    height: fit-content;
    color: white;
}
.slideNavBox nav {
    flex: 1;
    text-align: center;
}
.slideNavBox nav ul li{
    padding: 5%;
    margin: 5%;
    list-style: none;
    transition: 0.25s;
}
.slideNavBox nav ul li:hover{
    background-color: hsl(0, 0%, 15%);
}
.slideNavBox nav ul li a{
    text-decoration: none;
    color: white;
    font-weight: bold;
}
.slideNavBox nav ul li a:hover::after{
    width: 100%;
}
.slideNavBoxCurrent{
    background-color: hsl(0, 0%, 30%);
}
/* End of model */

